Closed Bug 1359662 Opened 8 years ago Closed 8 years ago

Screen-sharing track.getSettings() returns crazy high values for width and height

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

52 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: jib, Assigned: jib)

References

Details

Attachments

(1 file)

This is not a regression, rather an unintentional surfacing of an internal hack where width and height are overloaded with internal values [1] that should not have been exposed through getSettings(). [1] https://dxr.mozilla.org/mozilla-central/rev/f229b7e5d91eb70d23d3e31db7caff9d69a2ef04/dom/media/webrtc/MediaEngineRemoteVideoSource.cpp#453-460
STR: 1. Open https://jsfiddle.net/jib1/77nqay6w/ 2. Pick Screen to share: "Entire screen", and share screen. 3. Click the button named "160". Expected result: Applied 160 x 120 got ~160 x ~120 Actual result: Applied 160 x 120 got 10551295 x 7929855
This is a wallpaper patch basically, potentially for uplift if we need it. I've filed bug 1359668 as a follow-up since a proper solution will involve a bit more work.
Is this still relevant given bug 1359668 is fixed?
Flags: needinfo?(jib)
Yes, there's a window before the first frame arrives when we return the nominal values, and those are still wrong.
Flags: needinfo?(jib)
Comment on attachment 8861722 [details] Bug 1359662 - Make track.getSettings() output nominal values for width and height instead of crazy high ones. https://reviewboard.mozilla.org/r/133706/#review136856 Found I had this sitting "Pending" with an r+ ....for a Long Time. Sorry
Attachment #8861722 - Flags: review?(rjesup) → review+
Pushed by jbruaroey@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/15fc82881432 Make track.getSettings() output nominal values for width and height instead of crazy high ones. r=jesup
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: