Bug 1359662 - Make track.getSettings() output nominal values for width and height instead of crazy high ones. r=jesup

MozReview-Commit-ID: JSfLX4vgkvS